--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
     "express": "^4.17.1",
+    "gulp-install": "^1.1.0",
+    "history": "^4.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-keydown": "^1.9.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "3.4.3",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
